[gd_scene load_steps=5 format=3 uid="uid://bdbgr61wtj4l7"]

[ext_resource type="Script" path="res://scripts/interaction.gd" id="1_7ebio"]
[ext_resource type="FontFile" uid="uid://coqneoienhrf" path="res://fonts/ChiKareGo2.ttf" id="2_75fip"]
[ext_resource type="AudioStream" uid="uid://ceflrud0o3drm" path="res://sounds/start_dialogue.mp3" id="3_px34k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nj5ji"]
radius = 30.0

[node name="interaction" type="Area2D"]
script = ExtResource("1_7ebio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nj5ji")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
offset_left = -25.0
offset_top = -34.0
offset_right = 30.0
offset_bottom = -11.0
theme_override_fonts/font = ExtResource("2_75fip")
theme_override_font_sizes/font_size = 12
text = "Press F"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartDialogue" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_px34k")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
